deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  flask
  namespace: sainath
  labels:
    app:  flask
spec:
  selector:
    matchLabels:
      app: flask
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  flask
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  flask
        image:  flask:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
