service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-svc
  namespace: sainath
spec:
  selector:
    app: flask
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: flask
    protocol: TCP
    port: 5000
    targetPort: 5001
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    nodePort:
