ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: sainath
spec:
  rules:
  - host: www.sample-flask.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-svc
            port:
              number: 80
